<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/card_background"
	    android:paddingBottom="10dp" >

        <kamoncust.application.com.libs.ResizableImageView
            android:id="@+id/imgPreview"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/userdefault" />
        
	    <TextView
	        android:id="@+id/txtJudul"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignTop="@id/imgPreview"
	        android:layout_marginRight="5dp"
	        android:layout_toRightOf="@id/imgPreview"
	        android:text="@string/listdata_nama"
	        android:textColor="@color/actionbar" />
	
	    <TextView
	        android:id="@+id/textKeterangan"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@id/txtJudul"
	        android:layout_alignParentRight="true"
	        android:layout_below="@id/txtJudul"
	        android:layout_marginRight="5dp"
	        android:text="@string/detail_harga"
	        android:textStyle="bold" />
	
		<TextView
		    android:id="@+id/txtPostBy"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@id/textKeterangan"
		    android:layout_alignParentRight="true"
		    android:layout_below="@id/textKeterangan"
		    android:layout_marginRight="5dp"
		    android:gravity="left"
		    android:text="@string/timeView"
		    android:textColor="@color/msg_border_color" />

		<kamoncust.application.com.libs.ResizableImageView
		    android:id="@+id/operation"
		    android:layout_width="72dp"
		    android:layout_height="26dp"
		    android:layout_alignBottom="@+id/imgPreview"
		    android:layout_alignParentRight="true"
		    android:layout_marginRight="5dp"
		    android:scaleType="fitXY" />

		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBottom="@+id/operation"
		    android:layout_alignLeft="@+id/operation"
		    android:layout_alignRight="@+id/operation"
		    android:layout_alignTop="@+id/operation" >

			<Button
			    android:id="@+id/btn_add"
			    android:layout_width="0dp"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:background="@null" />

			<Button
			    android:id="@+id/btn_delete"
			    android:layout_width="0dp"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:background="@null" />

		</LinearLayout>

		
    
	</RelativeLayout>
</LinearLayout>